test/end-to-end/compile-errors/spec-multiple-impls.crow
# Redundant function
to json(a string)
	a string

to-json-string[t] string(a t) (json, t) to
	a.to::json show

main void()
	info log ("a",)::string[] to-json-string
